# hevapy

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  env-dev.yml  env.yml  environment.yml  index.md  intro.md  notes.md  pyproject.toml  requirements.txt  setup.md  setup.py  test_ghcn.py  test_non_stationary_GEV.py  test_script_1.py  test_script_2.py  test_script_3.py  work_1.py  work_gev_non_stationary.py  work_gev_stationary.py  work_record_length.py  work_world_rl_plot.py  work_world_rl_save.py
heva/: MANIFEST.in  __init__.py  dist.py  gev.py  gev_plot.py  io.py  preprocess.py
heva/aux_files/: ghcnd-version.txt
heva/data/: ghcnd-inventory.txt
heva/tests/: test_heva_py.py
heva/utils/: __init__.py  cart_plot.py  details.py  gev.py  gev_plot.py  gev_r.py  graphics.py  helper.py  io.py  preprocess.py
hevapy/: __init__.py  gev.py  gev_plot.py  graphics.py  helper.py
hevapy/aux_files/sample_station/: ASN00023000.dly  CA006158350.dly  NLE00100499.dly
sample_download/: GM000004204.dly  GM000010962.dly  UK000056225.dly  USC00361920.dly
test/: test_helper.py
tests/: test_heva_py.py
