[tool.poetry]
name = "heva-py"
version = "0.1.0"
description = ""
authors = ["Mohit Anand <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.5"
matplotlib = "^3.2.1"
cartopy = "^0.18.0"
scipy = "^1.4.1"
pre-commit = "^2.4.0"
numdifftools = "^0.9.39"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.2"

[tool.black]
    py38 = true
    include = '\.pyi?$'
    exclude = '''
    /(
        \.git
      | \.hg
      | \.mypy_cache
      | \.tox
      | \.venv
      | _build
      | buck-out
      | build
      | dist

      # The following are specific to Black, you probably don't want those.
      | blib2to3
      | tests/data
    )/
    '''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

